last docker steps
