# docs/swagger.json
@@ -103,12 +103,12 @@
                 "summary": "Queue a message for sending",
                 "parameters": [
                     {
-                        "description": "Message to be queued",
+                        "description": "Create form to be queued",
                         "name": "message",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Message"
+                            "$ref": "#/definitions/message.CreateMessageForm"
                         }
                     }
                 ],
@@ -130,6 +130,21 @@
         }
     },
     "definitions": {
+        "message.CreateMessageForm": {
+            "type": "object",
+            "required": [
+                "content",
+                "recipient_phone"
+            ],
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "recipient_phone": {
+                    "type": "string"
+                }
+            }
+        },
         "message.GetMessagesResponse": {
             "type": "object",
             "properties": {
@@ -162,6 +177,9 @@
                     "type": "integer"
                 },
                 "recipient_phone": {
+                    "type": "string"
+                },
+                "remote_id": {
                     "type": "string"
                 },
                 "sent_at": {
